@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.56 2005/01/29 07:23:07 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.57 2005/01/29 08:14:03 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   29 Jan 2005; Andrew Gaffnye <agaffney@gentoo.org>
-  Shell for partition properties dialog.
+  Shell for partition properties dialog. Added "working" Ok and Cancel
+  buttons to PartProperties.py
 
   27 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   add len(sys.argv) check so gtkfe.py can be run without -p. Readded
